# csdecomp

./: .bazelrc  .clang-format  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  setup.sh
.claude/: settings.local.json
.github/workflows/: build-wheels.yml  ci.yml
csdecomp/docs/: Doxyfile  gen_py_doc.py  mainpage.dox
csdecomp/docs/source/: conf.py  index.rst
csdecomp/src/cpp/: BUILD  bezier_curve.cpp  bezier_curve.h  collision_checker.cpp  collision_checker.h  collision_geometry.h  distance_aabb_linesegment.cpp  drm_planner.cpp  drm_planner.h  geometry_utilities.h  hpolyhedron.cpp  hpolyhedron.h  kinematic_tree.cpp  kinematic_tree.h  linesegment_aabb_checker.cpp  linesegment_aabb_checker.h  minimal_kinematic_tree.cpp  minimal_kinematic_tree.h  minimal_plant.h  roadmap.cpp  roadmap.h  roadmap_builder.cpp  roadmap_builder.h  urdf_parser.cpp  urdf_parser.h
csdecomp/src/cuda/: BUILD  cuda_collision_checker.cu  cuda_collision_checker.h  cuda_distance_field.cu  cuda_edge_inflation_zero_order.cu  cuda_edge_inflation_zero_order.h  cuda_edit_regions.cu  cuda_edit_regions.h  cuda_forward_kinematics.cu  cuda_forward_kinematics.h  cuda_hit_and_run_sampling.cu  cuda_hit_and_run_sampling.h  cuda_polytope_builder.cu  cuda_polytope_builder.h  cuda_set_builder_utils.cu  cuda_set_builder_utils.h  cuda_utilities.h  cuda_visibility_graph.cu  cuda_visibility_graph.h  drm_cuda_utils.cu
csdecomp/src/geometry/: BUILD  cuda_distance_field.cu  cuda_distance_field.h  cuda_geometry_utilities.h  cuda_hit_and_run_sampling.cu  cuda_hit_and_run_sampling.h  distance_aabb_linesegment.cpp  distance_aabb_linesegment.h  hpolyhedron.cpp  linesegment_aabb_checker.cpp  linesegment_aabb_checker.h
csdecomp/src/planning/: BUILD  bezier_curve.cpp  bezier_curve.h  cuda_edge_inflation_zero_order.cu  cuda_edge_inflation_zero_order.h  cuda_edit_regions.cu  cuda_edit_regions.h  cuda_plane_update.cu  cuda_plane_update.h  cuda_polytope_builder.cu  cuda_polytope_builder.h  cuda_set_builder_utils.cu  cuda_set_builder_utils.h  cuda_visibility_graph.cu  cuda_visibility_graph.h  drm_cuda_utils.cu  drm_cuda_utils.h  drm_planner.cpp  drm_planner.h  roadmap.cpp  roadmap_builder.cpp  roadmap_builder.h
csdecomp/src/plant/: BUILD  collision_checker.cpp  collision_checker.h  cuda_collision_checker.cu  cuda_collision_checker.h  cuda_forward_kinematics.cu  cuda_forward_kinematics.h  kinematic_tree.cpp  kinematic_tree.h  minimal_kinematic_tree.cpp  minimal_plant.h  urdf_parser.cpp  urdf_parser.h
csdecomp/src/utils/: BUILD
csdecomp/tests/: BUILD  csdecomp_test.py  drake_dep_test.py  plotting_utils.h  pycsdecomp_test.py  test_matplotlib.cpp
csdecomp/tests/test_assets/: 2_branch_5dof.urdf  3dof_doublename_joint.urdf  3dof_doublename_link.urdf  3dofrobot.urdf  3dofrobot_prismatic.urdf  3dofrobot_spheres.urdf  BUILD  box.urdf  camera_and_tripod.urdf  collapse_urdf.py  collapsed_robotiq.urdf  kinova.urdf  kinova_sens.urdf  movable_block.urdf  random_grid.voxels.txt  reduced_kinova_sens.urdf  table.urdf  (+1 more)
devel/: movable_capsule.urdf  pyproject.toml  sandbox.ipynb  utils.py
examples/: BUILD  Readme.md  build_DRM.py  dev_install.sh  drake_csd_bridge.ipynb  kinova.ipynb  kinova_mintime_planning.py  minimal_test.py  plan_DRM.py  planning_utils.py  pyproject.toml  test_drake_bridge.py  test_eizo.py  using_drake_csd_bridge.ipynb  utils.py
tools/: buildifier_test.bzl  cc_with_python.bzl  cc_with_system_python.bzl  clang_format_test.bzl  embedded_py.bzl  lint.bzl  my_python_version.bzl  recompile_python_reqs.sh
(+71 files in other folders)
