[project]
name = "csd-examples"
version = "0.1.0"
description = "CSDecomp examples"
requires-python = ">=3.10,<3.13"
dependencies = [
    # NOTE: csdecomp must be installed separately:
    #   Users: pip install csdecomp
    #   Devs:  bash dev_install.sh (builds and installs from source)
    "drake>=1.38.0",
    "numpy>=1.25.2",
    "ipywidgets>=8.1.2",
    "jupyter>=1.1.1",
    "scipy>=1.14.1",
    "pymcubes>=0.1.6",
    "networkx>=3.4.2",
    "matplotlib",
    "cspace-utils",
]

[tool.uv.sources]
cspace-utils = { git = "https://github.com/wernerpe/cspace_utils.git", branch = "main" }
